# yumex-ng

./: .editorconfig  .flake8  .gitignore  Makefile  README.md  local.sh  meson.build  meson_options.txt  pyproject.toml  pytest.ini  yumex.spec
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.tx/: config
data/: dk.yumex.Yumex-flatpakref.desktop.in.in  dk.yumex.Yumex-rpm.desktop.in.in  dk.yumex.Yumex.appdata.xml.in.in  dk.yumex.Yumex.desktop.in.in  dk.yumex.Yumex.gschema.xml.in  dk.yumex.Yumex.metainfo.xml.in.in  meson.build  style.css  yumex.gresource.xml
data/icons/: meson.build
data/service/: 50-yumex-updater-systray.preset  50-yumex-updater.preset  meson.build  yumex-service.conf  yumex-updater-systray.service  yumex-updater.service
data/ui/: advanced_actions.blp  error_dialog.blp  flatpak_installer.blp  flatpak_result.blp  flatpak_row.blp  flatpak_search.blp  flatpak_view.blp  meson.build  package_filter.blp  package_info.blp  package_row.blp  package_settings.blp  package_view.blp  preferences.blp  progress.blp  queue_row.blp  queue_view.blp  repository.blp  search_settings.blp  shortcuts-dialog.blp  shortcuts.blp  transaction_result.blp  window.blp
docs/: customize.md  debug.md  design.md  howto.md  release.md  test.md
po/: LINGUAS  POTFILES  ar.po  bg.po  bn_IN.po  ca.po  cmn.po  cs.po  da.po  de.po  el.po  en_BR.po  es.po  es_ES.po  fa.po  fr.po  gu.po  he_IL.po  hu.po  id.po  it.po  it_IT.po  ja.po  ko.po  ky.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  ru_RU.po  sk.po  sr.po  sr@latin.po  sv.po  tr_TR.po  uk.po  update_potfile.sh  yumex.pot  zh_CN.po  (+1 more)
tests/: conftest.py  dev.py  dont_test_dnf4_backend.py  dont_test_dnf5_backend.py  dont_test_dnf5_backend_root.py  dont_test_service.py  mock.py  readme.md  template_gui.py  test_backend_dnf.py  test_cache.py  test_dnf4_backend.py  test_dnf5_backend.py  test_enums.py  test_factory.py  test_flatpak_installer.py  test_flatpak_package.py  test_flatpak_result.py  test_flatpak_view.py  test_package.py  test_package_view.py  test_preferences.py  test_presenter.py  test_progress.py  test_service_dnf4.py  test_service_dnf5.py  test_storage.py  test_updates_filter.py  test_util.py  test_utils_dbus.py
tests/guitest/: app.py  main.py  test.py  win.py
yumex/: __init__.py  constants.py.in  main.py  meson.build  yumex.in  yumex_updater  yumex_updater_systray
yumex/backend/: __init__.py  cache.py  daemon.py  dnf.py  dnf4.py  dnf5.py  flatpak.py  interface.py  presenter.py
yumex/backend/dnf/: __init__.py  dnf4.py  dnf5.py  factory.py
yumex/backend/dnf5daemon/: __init__.py  client.py  filter.py
yumex/backend/flatpak/: __init__.py  backend.py  search.py  transaction.py
yumex/service/: __init__.py  data.py  dnf4.py  dnf5.py  dnf5daemon.py  notification.py  yumex_updater_systray.py
yumex/ui/: __init__.py  advanced_actions.py  dialogs.py  error_dialog.py  flatpak_installer.py  flatpak_result.py  flatpak_search.py  flatpak_view.py  pachage_view.py  package_filter.py  package_info.py  package_row.py  package_settings.py  package_view.py  preferences.py  progress.py  queue_view.py  search_settings.py  test.py  transaction_result.py  window.py
yumex/utils/: __init__.py  dbus.py  enums.py  exceptions.py  storage.py  types.py  updater.py
