scalable_dir = join_paths('hicolor', 'scalable', 'apps')
install_data(
  join_paths(scalable_dir, ('@0@.svg').format(APPLICATION_ID)),
  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir)
)
install_data(
  join_paths(scalable_dir, 'yumex-system-software-update-light.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir)
)
install_data(
  join_paths(scalable_dir, 'yumex-system-software-update-dark.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir)
)
