scalable_dir = join_paths('hicolor', 'scalable', 'apps')
install_data(
  join_paths(scalable_dir, ('@0@.svg').format(APPLICATION_ID)),
  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir),
)
install_data(
  join_paths(scalable_dir, 'yumex-update-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir),
)

install_data(
  join_paths(scalable_dir, 'yumex-update-dark-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir),
)