blueprints = custom_target(
    'blueprints',
    input: files(
        'advanced_actions.blp',
        'flatpak_result.blp',
        'flatpak_row.blp',
        'flatpak_search.blp',
        'flatpak_view.blp',
        'package_info.blp',
        'package_settings.blp',
        'package_view.blp',
        'preferences.blp',
        'progress.blp',
        'queue_row.blp',
        'queue_view.blp',
        'repository.blp',
        'search_settings.blp',
        'shortcuts.blp',
        'transaction_result.blp',
        'window.blp',
    ),
    output: '.',
    command: [
        find_program('blueprint-compiler'),
        'batch-compile',
        '@OUTPUT@',
        '@CURRENT_SOURCE_DIR@',
        '@INPUT@',
    ],
)